@@ -36,7 +36,6 @@
 #include <windows.h>
 #else
 #include <sys/socket.h>
-#include <sys/signal.h>
 #include <sys/resource.h>
 #endif
 #include <fcntl.h>
